--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["haiyoune7 <haiyoune7@outlook.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+aes = "0.3.2"
+aes-soft = "0.3.3"
+block-modes = "0.3.3"
+base64 = "0.10.1"
+rustc-serialize = "0.3.24"
