--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ block-modes = "0.3.3"
 base64 = "0.10.1"
 serde = { version = "1.0.94", features = ["derive"] }
 serde_json = "1.0.40"
+structopt = "0.2.18"
