--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           toolchain: stable
           override: true
+      - name: show git status
+        run: git status
       - name: package
         uses: actions-rs/cargo@v1
         with:
