--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,3 +48,8 @@ path = "examples/qcmdump.rs"
 [[example]]
 name = "ncmdump_by_read"
 path = "examples/ncmdump_by_read.rs"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = "0.2.50"
+js-sys = "0.3.27"
+web-sys = "0.3.27"
