--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,4 @@ cipher = { version = "0.4.3", features = ["alloc", "block-padding"] }
 serde = { version = "1.0.101", features = ["derive"] }
 serde_json = "1.0.40"
 structopt = "0.3.2"
+thiserror = "1.0.31"
