--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ncmdump"
-version = "0.2.0"
+version = "0.3.0"
 authors = ["iqiziqi <iqiziqi@outlook.com>"]
 edition = "2021"
 
@@ -18,11 +18,11 @@ exclude = [
 ]
 
 [dependencies]
-aes = "0.8.1"
-anyhow = "1.0.57"
-base64 = "0.20.0-alpha.1"
-cipher = { version = "0.4.3", features = ["alloc", "block-padding"] }
-serde = { version = "1.0.101", features = ["derive"] }
-serde_json = "1.0.40"
-structopt = "0.3.2"
-thiserror = "1.0.31"
+aes = "0.8"
+anyhow = "1.0"
+base64 = "0.21"
+cipher = { version = "0.4", features = ["alloc", "block-padding"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+structopt = "0.3"
+thiserror = "1.0"
