--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,8 @@ glob = "^0.3"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 thiserror = "^1.0"
+
+[features]
+default = ['ncmdump', 'qmcdump']
+ncmdump = []
+qmcdump = []
