--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ncmdump"
-version = "0.4.0"
+version = "0.5.0"
 authors = ["iqiziqi <iqiziqi@outlook.com>"]
 edition = "2021"
 
@@ -24,7 +24,7 @@ base64 = "^0.21"
 cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
 clap = { version = "^4.1", features = ["derive"] }
 glob = "^0.3"
-indicatif = "0.17"
+indicatif = "^0.17"
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 thiserror = "^1.0"
