--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,29 +12,33 @@ jobs:
   package:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - name: Cache cargo
+      - name: Setup | Checkout
+        uses: actions/checkout@v1
+
+      - name: Setup | Cache cargo
         uses: actions/cache@v3
         with:
           path: ~/.cargo
           key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
           restore-keys: cargo-${{ runner.os }}
-      - name: Cache build
+
+      - name: Setup | Cache build
         uses: actions/cache@v3
         with:
           path: ./target
           key: target-${{ runner.os }}-${{ github.run_id }}
           restore-keys: target-${{ runner.os }}
-      - name: Install rust toolchain
+
+      - name: Setup | Rust
         uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: stable
-          override: true
-      - name: Show git status
-        run: git status
-      - name: Package
+
+      - name: Deploy | Package
         run: cargo package
-      - name: List packaged files
+
+      - name: Deploy | List packaged files
         run: cargo package --list
-      - name: Publish
+
+      - name: Deploy | Publish
         run: cargo publish --token ${{secrets.crate_token}}
