--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,34 +17,14 @@ exclude = [
     "*.ncm"
 ]
 
+[workspace]
+members = ["crates/ncmdump"]
+
 [dependencies]
-aes = "^0.8"
 anyhow = "^1.0"
-base64 = "^0.21"
-cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
 clap = { version = "^4.1", features = ["derive"] }
 crossbeam-channel = "0.5.7"
 glob = "^0.3"
 indicatif = "^0.17"
-serde = { version = "^1.0", features = ["derive"] }
-serde_json = "^1.0"
 thiserror = "^1.0"
-
-[features]
-default = ['ncmdump', 'qmcdump', 'utils']
-ncmdump = []
-qmcdump = []
-deprecate = []
-utils = []
-
-[[example]]
-name = "ncmdump"
-path = "examples/ncmdump.rs"
-
-[[example]]
-name = "qmcdump"
-path = "examples/qcmdump.rs"
-
-[[example]]
-name = "ncmdump_by_read"
-path = "examples/ncmdump_by_read.rs"
+ncmdump = { path = "crates/ncmdump", features = ["ncmdump", "qmcdump", "utils"] }
