--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,4 +40,4 @@ jobs:
         run: cargo clippy
 
       - name: Test | Unit test
-        run: cargo test --release --all-features
+        run: cargo test --release --all-features --workspace
