--- a/crates/ncmdump/Cargo.toml
+++ b/crates/ncmdump/Cargo.toml
@@ -1,16 +1,16 @@
 [package]
-name = "ncmdump-bin"
+name = "ncmdump"
 version = "0.6.1"
-authors = ["iqiziqi <iqiziqi@outlook.com>"]
-edition = "2021"
+authors = { workspace = true }
+edition = { workspace = true }
 
-description = "Some copyright protection file dump."
-homepage = "https://github.com/iqiziqi/ncmdump.rs"
-documentation = "https://docs.rs/ncmdump"
-repository = "https://github.com/iqiziqi/ncmdump.rs"
-license = "MIT"
-readme = "README.md"
-keywords = ["ncm", "qmc", "music", "dump"]
+description = { workspace = true }
+homepage = { workspace = true }
+documentation = { workspace = true }
+repository = { workspace = true }
+license = { workspace = true }
+readme = { workspace = true }
+keywords = { workspace = true }
 exclude = [
     ".editorconfig",
     ".github/**/*",
@@ -26,7 +26,7 @@ serde_json = "^1.0"
 thiserror = "^1.0"
 
 [dev-dependencies]
-anyhow = "^1.0"
+anyhow = { workspace = true }
 
 [features]
 default = ['ncmdump', 'qmcdump', 'utils']
