--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = ["crates/ncmdump", "crates/ncmdump-bin"]
 resolver = "2"
 
 [workspace.package]
+version = "0.7.0"
 authors = ["iqiziqi <iqiziqi@outlook.com>"]
 edition = "2021"
 
@@ -17,3 +18,4 @@ keywords = ["ncm", "qmc", "music", "dump"]
 [workspace.dependencies]
 anyhow = "^1.0"
 ncmdump = { path = "crates/ncmdump" }
+thiserror = "^1.0"
