--- a/crates/ncmdump/Cargo.toml
+++ b/crates/ncmdump/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ncmdump"
-version = "0.6.1"
+version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
 
@@ -14,6 +14,8 @@ keywords = { workspace = true }
 exclude = [
     ".editorconfig",
     ".github/**/*",
+    "res/*",
+    "examples/*",
     "*.ncm"
 ]
 
@@ -23,7 +25,7 @@ base64 = "^0.21"
 cipher = { version = "^0.4", features = ["alloc", "block-padding"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
-thiserror = "^1.0"
+thiserror = { workspace = true }
 
 [dev-dependencies]
 anyhow = { workspace = true }
