--- a/crates/ncmdump-bin/Cargo.toml
+++ b/crates/ncmdump-bin/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ncmdump-bin"
-version = "0.6.0"
+version = { workspace = true }
 authors = { workspace = true }
 edition = { workspace = true }
 
@@ -19,10 +19,15 @@ path = "src/main.rs"
 [dependencies]
 anyhow = { workspace = true }
 clap = { version = "^4.1", features = ["derive"] }
-crossbeam-channel = "0.5.7"
+crossbeam-channel = "^0.5"
 glob = "^0.3"
 indicatif = "^0.17"
-thiserror = "^1.0"
+thiserror = { workspace = true }
 ncmdump = { workspace = true }
 metaflac = "0.2.5"
 id3 = "1.9.0"
+
+[profile.release]
+lto = true
+opt-level = "s"
+strip = true
