--- a/crates/ncmdump-bin/Cargo.toml
+++ b/crates/ncmdump-bin/Cargo.toml
@@ -26,6 +26,7 @@ thiserror = { workspace = true }
 ncmdump = { workspace = true }
 metaflac = "0.2.5"
 id3 = "1.9.0"
+scan_dir = { version = "0.3.3" }
 
 [profile.release]
 lto = true
