--- a/crates/ncmdump-bin/Cargo.toml
+++ b/crates/ncmdump-bin/Cargo.toml
@@ -20,9 +20,11 @@ path = "src/main.rs"
 anyhow = { workspace = true }
 clap = { version = "^4.1", features = ["derive"] }
 crossbeam-channel = "^0.5"
-glob = "^0.3"
 indicatif = "^0.17"
 thiserror = { workspace = true }
 ncmdump = { workspace = true }
 metaflac = "0.2.5"
 id3 = "1.9.0"
+
+[target.'cfg(windows)'.dependencies]
+glob = "^0.3"
